--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+</head>
 <body>
 
 <h1>Super Cool Website</h1>
