--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,21 @@
 <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
+  <section id="overlay">
+    <h1>Super Cool Website</h1>
 
-<h1>Super Cool Website</h1>
+    <form action="/open" method="get">
+      <input type="text" id="submited_text" name="website"><br><br>
 
-<form action="/open" method="get">
-  <input type="text" id="submited_text" name="website"><br><br>
-  
-  <input type="radio" id="webpage" name="method" value="webpage" checked="checked">
-  <label for="webpage">Webpage</label><br>
-  <input type="radio" id="video" name="method" value="video">
-  <label for="video">Video</label><br>
-  <input type="radio" id="lucky" name="method" value="lucky">
-  <label for="lucky">I'm feeling lucky</label><br><br>
- 
-  <input type="submit" value="Submit">
-</form>
+      <input type="radio" id="webpage" name="method" value="webpage" checked="checked">
+      <label for="webpage">Webpage</label><br>
+      <input type="radio" id="video" name="method" value="video">
+      <label for="video">Video</label><br>
+      <input type="radio" id="lucky" name="method" value="lucky">
+      <label for="lucky">I'm feeling lucky</label><br><br>
 
+      <input type="submit" value="Submit">
+    </form>
+  </section>
 </body>
 </html>
