--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="templates">
+<html dir="ltr">
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style.css">
