--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
-<html dir="ltr">
+<html>
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+<style>
+body {
+  background-color: rgb(57, 169, 219);
+  font-family: Rubik, Arial;
+}
+
+form {
+  text-align: center;
+  line-height: 30px;
+  height: 80%;
+  overflow: auto;
+}
+
+form hr {
+  width: 15%;
+}
+
+h1 {
+  text-align: center;
+}
+
+#overlay {
+  width: 80%;
+  margin: 3% auto;
+  height: 95vh;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 40px;
+}
+</style>
 </head>
 <body>
-  <section id="overlay">
-    <h1>Super Cool Website</h1>
+<section id="overlay">
+<h1>Super Cool Website</h1>
 
-    <form action="/open" method="get">
-      <input type="text" id="submited_text" name="website"><br><br>
-
-      <input type="radio" id="webpage" name="method" value="webpage" checked="checked">
-      <label for="webpage">Webpage</label><br>
-      <input type="radio" id="video" name="method" value="video">
-      <label for="video">Video</label><br>
-      <input type="radio" id="lucky" name="method" value="lucky">
-      <label for="lucky">I'm feeling lucky</label><br><br>
-
-      <input type="submit" value="Submit">
-    </form>
-  </section>
+<form action="/open" method="get">
+  <input type="text" id="submited_text" name="website" value="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><br><br>
+  
+  <input type="radio" id="webpage" name="method" value="webpage" checked="checked">
+  <label for="webpage">Webpage</label><br>
+  <input type="radio" id="video" name="method" value="video">
+  <label for="video">Video</label><br>
+  <input type="radio" id="lucky" name="method" value="lucky">
+  <label for="lucky">I'm feeling lucky</label><br><br>
+ 
+  <input type="submit" value="Submit" class="button">
+</form>
+</section>
 </body>
 </html>
