--- a/templates/index.html
+++ b/templates/index.html
@@ -8,18 +8,21 @@ body {
 }
 
 form {
-  text-align: center;
+  text-align: justify;
   line-height: 30px;
   height: 80%;
+  margin: 3% 35%;
+  width: 80%;
   overflow: auto;
 }
 
 form hr {
-  width: 15%;
+  width: 50%;
 }
 
 h1 {
   text-align: center;
+  margin: 3% auto;
 }
 
 #overlay {
@@ -33,6 +36,7 @@ h1 {
 </head>
 <body>
 <section id="overlay">
+<br>
 <h1>Super Cool Website</h1>
 
 <form action="/open" method="get">
