--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ h1 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 1% 1%;
+  margin: 2% 1%;
   cursor: pointer;
 }
 </style>
@@ -63,7 +63,7 @@ h1 {
   <input type="submit" name="method" value="Lucky" class="button">
 </form>
 <form action="/close" method="get">
-	<input type="submit" name="method" value="Clear Queue" class="button">
+	<input type="submit" name="method" value="Skip Video" class="button">
 </form>
 </section>
 <section id="inputBox">
