--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,20 @@ h1 {
   width: 80%;
   text-align: center;
   margin: 3% auto;
-  height: 50vh;
+  height: 60vh;
   background-color: #EEEEEE;
   border-radius: 40px;
 }
+
+#queueBox {
+  width: 80%;
+  text-align: center;
+  margin: 3% auto;
+  height: 100vh;
+  background-color: #EEEEEE;
+  border-radius: 40px;
+}
+
 #thumbnail {
   width: 30vh;
   text-align: center;
@@ -66,9 +76,9 @@ h1 {
 	<input type="submit" name="method" value="Skip Video" class="button">
 </form>
 </section>
-<section id="inputBox">
+<section id="queueBox">
 <br>
-<h4>Rickroll</h4>
+<h3>Rickroll</h3>
 <img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
 </section>
 </body>
