--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@ body {
   font-family: Rubik, Arial;
 }
 
-form {
+.submitform {
   line-height: 30px;
   margin: 3% auto;
   width: 80%;
@@ -60,13 +60,16 @@ h1 {
   margin: 2% 1%;
   cursor: pointer;
 }
+div {
+  display: inline-block;
+}
 </style>
 </head>
 <body>
 <section id="inputBox">
 <br>
 <h1>Super Cool Website</h1>
-<form action="/open" method="get">
+<form action="/open" method="get" class="submitform">
   <input type="text" id="submited_text" name="website" size="50"><br>
   <input type="submit" name="method" value="Webpage" class="button">
   <input type="submit" name="method" value="Video" class="button">
@@ -77,9 +80,17 @@ h1 {
 </form>
 </section>
 <section id="queueBox">
-<br>
-<h3>Rickroll</h3>
-<img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
+  <br>
+  <div>
+    <img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
+    </div>
+  <div>
+    <form action="/vote" method="get">
+      <input type="submit" name="vote" value="Upvote" class="button">
+      <input type="submit" name="vote" value="Downvote" class="button">
+    </form>
+    <br>
+  </div>
 </section>
 </body>
 </html>
