--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@ h1 {
   width: 80%;
   text-align: center;
   margin: 3% auto;
-  height: 60vh;
+  height: 100%;
   background-color: #EEEEEE;
-  border-radius: 40px;
+  border-radius: 7%;
 }
 
 #queueBox {
@@ -39,14 +39,14 @@ h1 {
   margin: 3% auto;
   height: 100vh;
   background-color: #EEEEEE;
-  border-radius: 40px;
+  border-radius: 7%;
 }
 
 #thumbnail {
   width: 30vh;
   text-align: center;
   margin: auto auto;
-  height: 20vh;
+  height: 12%;
 }
 .button {
   background-color: #C4820E;
@@ -56,7 +56,7 @@ h1 {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 100%;
   margin: 2% 1%;
   cursor: pointer;
 }
@@ -78,6 +78,8 @@ div {
 <form action="/close" method="get">
 	<input type="submit" name="method" value="Skip Video" class="button">
 </form>
+<br>
+<br>
 </section>
 <section id="queueBox">
   <br>
