--- a/templates/fail.html
+++ b/templates/fail.html
@@ -7,7 +7,7 @@ body {
   font-family: Rubik, Arial;
 }
 
-form {
+.submitform {
   line-height: 30px;
   margin: 3% auto;
   width: 80%;
@@ -28,9 +28,9 @@ h1 {
   width: 80%;
   text-align: center;
   margin: 3% auto;
-  height: 60vh;
+  height: 100%;
   background-color: #EEEEEE;
-  border-radius: 40px;
+  border-radius: 7%;
 }
 
 #queueBox {
@@ -39,14 +39,14 @@ h1 {
   margin: 3% auto;
   height: 100vh;
   background-color: #EEEEEE;
-  border-radius: 40px;
+  border-radius: 7%;
 }
 
 #thumbnail {
   width: 30vh;
   text-align: center;
   margin: auto auto;
-  height: 20vh;
+  height: 12%;
 }
 .button {
   background-color: #C4820E;
@@ -56,9 +56,12 @@ h1 {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 100%;
   margin: 2% 1%;
   cursor: pointer;
+}
+div {
+  display: inline-block;
 }
 </style>
 </head>
@@ -66,7 +69,7 @@ h1 {
 <section id="inputBox">
 <br>
 <h1>Super Cool Website</h1>
-<form action="/open" method="get">
+<form action="/open" method="get" class="submitform">
   <input type="text" id="submited_text" name="website" size="50"><br>
   <input type="submit" name="method" value="Webpage" class="button">
   <input type="submit" name="method" value="Video" class="button">
@@ -75,12 +78,21 @@ h1 {
 <form action="/close" method="get">
 	<input type="submit" name="method" value="Skip Video" class="button">
 </form>
-<p>Whoops, something went wrong. Don't blame me, I'm just an html paragraph I don't know anything I swear I'll get you your money and interest next month just leave my kneecaps alone!</p>
+<p>Failed to add to queue</p>
+<br>
 </section>
 <section id="queueBox">
-<br>
-<h3>Rickroll</h3>
-<img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
+  <br>
+  <div>
+    <img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
+    </div>
+  <div>
+    <form action="/vote" method="get">
+      <input type="submit" name="vote" value="Upvote" class="button">
+      <input type="submit" name="vote" value="Downvote" class="button">
+    </form>
+    <br>
+  </div>
 </section>
 </body>
 </html>
