--- a/templates/success.html
+++ b/templates/success.html
@@ -85,12 +85,16 @@ div {
   <br>
   <div>
     <img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
-    </div>
+  </div>
   <div>
+    {%for i in range(0,len)%}
     <form action="/vote" method="get">
-      <input type="submit" name="vote" value="Upvote" class="button">
-      <input type="submit" name="vote" value="Downvote" class="button">
+      <p> {{videoQ[i].title}} </p>
+      <input type="submit" name="upvote" value={{videoQ[i].id}} class="button">
+      <input type="submit" name="downvote" value={{videoQ[i].id}} class="button">
     </form>
+    <br>
+    {%endfor%}
     <br>
   </div>
 </section>
