--- a/templates/success.html
+++ b/templates/success.html
@@ -87,7 +87,7 @@ div {
     <img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
   </div>
   <div>
-    {%for i in range(0,len)%}
+    {%for i in range(0,length)%}
     <form action="/vote" method="get">
       <p> {{videoQ[i].title}} </p>
       <input type="submit" name="upvote" value={{videoQ[i].id}} class="button">
