--- a/templates/success.html
+++ b/templates/success.html
@@ -37,7 +37,7 @@ h1 {
   width: 80%;
   text-align: center;
   margin: 3% auto;
-  height: 100vh;
+  height: 1000vh;
   background-color: #EEEEEE;
   border-radius: 7%;
 }
@@ -84,14 +84,11 @@ div {
 <section id="queueBox">
   <br>
   <div>
-    <img src="https://cdn.vox-cdn.com/thumbor/HWPOwK-35K4Zkh3_t5Djz8od-jE=/0x86:1192x710/fit-in/1200x630/cdn.vox-cdn.com/uploads/chorus_asset/file/22312759/rickroll_4k.jpg" alt="thumbnail" id="thumbnail">
-  </div>
-  <div>
     {%for i in range(0,length)%}
     <form action="/vote" method="get">
-      <p> {{videoQ[i].title}} </p>
-      <input type="submit" name="upvote" value={{videoQ[i].id}} class="button">
-      <input type="submit" name="downvote" value={{videoQ[i].id}} class="button">
+      <p> {{videos[i].title}} </p>
+      <button name="upvote" value={{videos[i].id}} type="submit">Upvote</button>
+      <button name="downvote" value={{videos[i].id}} type="submit">Downvote</button>
     </form>
     <br>
     {%endfor%}
