displays what is playing

--- a/templates/success.html
+++ b/templates/success.html
@@ -69,6 +69,7 @@ div {
 <section id="inputBox">
 <br>
 <h1>Super Cool Website</h1>
+<h2>Currently Playing: {{playing}}</h2>
 <form action="/open" method="get" class="submitform">
   <input type="text" id="submited_text" name="website" size="50"><br>
   <input type="submit" name="method" value="Webpage" class="button">
